Remove aoipurpleair that installs legacy pydantic and fix pydantic version

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 # comms
 aiohttp
-aiopurpleair
 
 # Debugging
 pudb
@@ -16,7 +15,7 @@ loguru
 pfmisc
 
 # Misc
-pydantic
+pydantic>=2.3.0
 pydantic_settings
 numpy
 scipy
