--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -23,10 +23,13 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v4
       with:
         python-version: '3.x'
     - name: Install dependencies
+      uses: py-actions/py-dependency-install@v4
+      with:
+          path: "requirements.txt"
       run: |
         python -m pip install --upgrade pip
         pip install build
