--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -27,11 +27,12 @@ jobs:
       with:
         python-version: '3.x'
     - name: Install dependencies
-      uses: py-actions/py-dependency-install@v4
-      with:
-          path: "requirements.txt"
+      #      uses: py-actions/py-dependency-install@v4
+      #      with:
+      #    path: "requirements.txt"
       run: |
         python -m pip install --upgrade pip
+        pip install -r requirements.txt
         pip install build
     - name: Build package
       run: python -m build
